<resources>
    <string name="app_name">Jaspe</string>
    <string name="home_label">Home</string>
    <string name="favorite_label">Favorites</string>
    <string name="notifications_label">Notifications</string>
    <string name="help_label">Help</string>
    <string name="search_label">Search</string>
    <string name="offers_label">Offers of the day</string>
    <string name="support_label">Support</string>
    <string name="account_label">My account</string>
    <string name="share_label">Share product</string>
    <string name="categories_label">Categories</string>
    <string name="category_item_label">Category item</string>
    <string name="search_product_label">Search Product</string>
    <string name="welcome_user_label">Welcome, %s</string>
    <string name="welcome_user_default_label">Welcome to ShopDani</string>

    <!-- product labels   -->
    <string name="product_name_label">Product name</string>
    <string name="product_price_label">\R$%1$.2f</string>
    <string name="product_type_label">Product type</string>
    <string name="product_description_label">Product description</string>
    <string name="offers_of_the_day_label">Offers of the Day</string>
    <string name="top_sellers_label">Top Sellers</string>
    <string name="remove_product_label">Remove product</string>
    <string name="related_products_label">Related Products</string>

    <!--  content descriptions  -->
    <string name="profile_picture_description">Profile picture</string>
    <string name="product_picture_description">Product picture</string>
    <string name="banners_picture_description">Banners</string>
    <string name="app_logo_picture_description">App logo</string>
    <string name="notification_icon_description">Notification icon</string>

    <!--  button labels  -->
    <string name="buy_button_label">Buy</string>
    <string name="filter_button_label">filter</string>

    <!--  Categories  -->
    <string name="amazon_category_label">Market</string>
    <string name="avon_category_label">Avon</string>
    <string name="baby_category_label">Baby</string>
    <string name="blog_category_label">Blog</string>
    <string name="last_seen_category_label">Recently Seen</string>
    <string name="natura_category_label">Natura</string>
    <string name="offers_category_label">Offers</string>
    <string name="contact_category_label">Contact</string>
    <string name="icon_label">Icon</string>
    <string name="ok_button_label">OK</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="quantity_of_products_label">%d products</string>

    <!-- SearchCache   -->
    <string name="remove_from_history_label">Remove from history</string>
    <string name="search_item_label">Search item</string>

    <string name="remove_all_label">Remove All</string>
    <string name="options_label">Options</string>

    <!--  Contact  -->
    <string name="contact_whatsapp_label">WhatsApp</string>
    <string name="contact_instagram_label">Instagram</string>
    <string name="contact_gmail_label">Gmail</string>
    <string name="contact_whatsapp_error_label">WhatsApp not installed</string>
    <string name="contact_instagram_error_label">Instagram not installed</string>
    <string name="contact_gmail_error_label">Email app not installed</string>
    <string name="view_more_products_label">View More</string>
    <string name="buy_by_whatsapp_label">Buy by WhatsApp</string>

    <string name="filter_options_label">Order by</string>
    <string-array name="array_filter_options">
        <item>@string/default_filter_label</item>
        <item>@string/name_filter_label</item>
        <item>@string/low_price_filter_label</item>
        <item>@string/high_price_filter_label</item>
    </string-array>
    <string name="default_filter_label">Default</string>
    <string name="name_filter_label">Name</string>
    <string name="low_price_filter_label">Low Price</string>
    <string name="high_price_filter_label">High Price</string>
    <string name="help_description_label">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="visit_us_label">Visit Us</string>

    <!-- Login ,Create Account and Account-->
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_button_label">Login</string>
    <string name="create_account_label">Create account</string>
    <string name="invalid_login_params">Invalid email or password</string>
    <string name="username_label">Username</string>
    <string name="new_username_label">New username</string>
    <string name="back_label">Back</string>
    <string name="create_label">Create</string>
    <string name="authentication_failed_label">Authentication failed.</string>
    <string name="document_error_label">Error writing document.</string>
    <string name="close_login">Close login page</string>
    <string name="logout_label">Logout</string>
    <string name="server_error_label">Server error</string>
    <string name="processing_image_error">Error during image processing</string>
    <string name="image_updated_successfully_label">Image updated successfully</string>
    <string name="username_updated_successfully_label">Username updated successfully</string>

    <!--  Notifications  -->
    <string name="notification_title_label">Notification title</string>
    <string name="notification_description_label">Notification description</string>
    <string name="notifications_count_label">1</string>
    <string name="notification_delete_label">Delete notification</string>
</resources>