<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="74dp"
    android:layout_marginVertical="1dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/product_picture_description" />
        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/product_name_label"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="@string/product_price_label"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="16dp"
            android:textSize="12sp"
            android:textStyle="italic"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_arrow_right_24"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/icon_label" />
    </FrameLayout>
</com.google.android.material.card.MaterialCardView>