<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_label" />

        <item
            android:id="@+id/dealsFragment"
            android:icon="@drawable/ic_baseline_local_offer_24"
            android:title="@string/offers_label" />

        <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorite_label" />

        <item
            android:id="@+id/sentItemsFragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="Sent Items" />

    </group>

    <item android:title="Support">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/helpFragment"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="Help" />
            </group>
        </menu>
    </item>
</menu>