<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="136dp"
    android:layout_marginVertical="1dp"
    app:cardCornerRadius="0dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/product_picture_description" />
    <TextView
        android:id="@+id/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:hint="@string/product_description_label"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="16dp"
        android:textSize="12sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:hint="@string/product_price_label"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="36dp"
        android:textSize="12sp"
        android:textStyle="italic"/>
</com.google.android.material.card.MaterialCardView>