<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.product.ProductFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_product"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:elevation="8dp"
            android:background="?colorPrimary"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/white"
            style="@style/ProductCardCorners">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="392dp"
                android:src="@drawable/ic_baseline_image_24"
                android:contentDescription="@string/product_picture_description" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:gravity="start"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?colorOnPrimary"
                android:hint="@string/product_name_label"/>
            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?colorOnPrimary"
                android:gravity="end"
                android:hint="@string/product_price_label"/>
        </LinearLayout>

        <TextView
            android:id="@+id/product_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/product_type_label"/>
        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:hint="@string/product_description_label"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/buy_product_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/buy_button_label"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buy_by_whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            app:cardBackgroundColor="?android:windowBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:textStyle="italic|bold"
                android:text="@string/buy_by_whatsapp_label"/>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/related_products_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>