<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="2dp"
    android:layout_marginHorizontal="2dp"
    android:layout_gravity="center_horizontal"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp" >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="160dp"
            android:layout_height="192dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:padding="4dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_picture_description" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:hint="@string/product_name_label"
            android:gravity="center" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price_label"
            android:textSize="16sp"
            android:textStyle="italic"
            android:padding="8dp"
            android:gravity="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>