<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="1dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardElevation="4dp"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_image_24"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:contentDescription="@string/product_picture_description" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="12sp"
            android:hint="@string/product_name_label" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:hint="@string/product_price_label" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

